--- a/Telco_customer_churn.ipynb
+++ b/Telco_customer_churn.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Telco_customer_churn.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPsDyBMuetruz0OBAl6a9Z8",
+      "authorship_tag": "ABX9TyPHg1Dt4NEvu3zLH+t4Pa6V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,14 +36,14 @@
         "url = 'https://raw.githubusercontent.com/holiz12/Analyse-Telco-Custer-Churn-using-XGBoost/main/WA_Fn-UseC_-Telco-Customer-Churn.csv'\n",
         "df = pd.read_csv(url)"
       ],
-      "execution_count": 47,
+      "execution_count": 69,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "Cydr6R2kWn7U",
-        "outputId": "b419c716-5682-42bd-c65e-ff3b5ed60d67",
+        "outputId": "e850e95a-f375-4317-c2f9-5026fc896474",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
@@ -52,7 +52,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 48,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -238,7 +238,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 48
+          "execution_count": 70
         }
       ]
     },
@@ -246,7 +246,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "RWNflOjmW6rQ",
-        "outputId": "3adf37bb-120b-4c33-db45-b7a37f7d8324",
+        "outputId": "d47f3ba0-9bcd-4c99-a631-2712e7ae360c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -254,7 +254,7 @@
       "source": [
         "df['SeniorCitizen'].unique()"
       ],
-      "execution_count": 49,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -266,7 +266,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 49
+          "execution_count": 71
         }
       ]
     },
@@ -274,7 +274,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "-sN6BDEfYBpf",
-        "outputId": "06c4bf30-6117-4014-d042-9d974f86d37c",
+        "outputId": "d52c4779-28df-445f-be38-14d84c2c6285",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 292
@@ -284,7 +284,7 @@
         "df.drop(['customerID'],axis=1,inplace=True)\n",
         "df.head()"
       ],
-      "execution_count": 50,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -464,7 +464,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 50
+          "execution_count": 72
         }
       ]
     },
@@ -472,7 +472,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Pb_ng8T4YmfC",
-        "outputId": "781c004d-51d7-4752-d43d-bc342752f6f7",
+        "outputId": "6a2168cd-6487-4f17-8386-54bce5896226",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 292
@@ -482,7 +482,7 @@
         "df['MultipleLines'].replace(' ','-',regex=True,inplace=True)\n",
         "df.head()"
       ],
-      "execution_count": 51,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -662,7 +662,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 51
+          "execution_count": 73
         }
       ]
     },
@@ -670,7 +670,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "CPcWQsLoaZvP",
-        "outputId": "462b7cab-ab98-42dd-fca8-28d66de31c8c",
+        "outputId": "cd9606b6-cc70-4ffd-c420-991fa6d71342",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 292
@@ -680,7 +680,7 @@
         "df['InternetService'].replace(' ','-',regex=True,inplace=True)\n",
         "df.head()"
       ],
-      "execution_count": 52,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -860,7 +860,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 52
+          "execution_count": 74
         }
       ]
     },
@@ -868,7 +868,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "n9XeKKonbNqq",
-        "outputId": "116e29ea-3eef-4e53-9f84-f281edb09020",
+        "outputId": "490e70cd-a58d-46b6-c205-463050dbf55b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 292
@@ -878,7 +878,7 @@
         "df['Contract'].replace(' ','-',regex=True,inplace=True)\n",
         "df.head()"
       ],
-      "execution_count": 53,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1058,7 +1058,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 53
+          "execution_count": 75
         }
       ]
     },
@@ -1066,7 +1066,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "-XBZj54BbTd-",
-        "outputId": "a1c8d884-008d-4cd7-836e-8be5126c42fd",
+        "outputId": "079ee100-252e-4d8d-f4d1-121142147692",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 292
@@ -1076,7 +1076,7 @@
         "df['PaymentMethod'].replace(' ','-',regex=True,inplace=True)\n",
         "df.head()"
       ],
-      "execution_count": 54,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1256,7 +1256,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 54
+          "execution_count": 76
         }
       ]
     },
@@ -1264,7 +1264,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "bnUiBVdBbYsB",
-        "outputId": "e6ac80e0-c7ef-4747-aab4-37ae292e89df",
+        "outputId": "eb510dbe-3472-48cf-ee3b-2a82970a2e35",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1272,7 +1272,7 @@
       "source": [
         "df['PaymentMethod'].unique()[0:10]"
       ],
-      "execution_count": 55,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1285,7 +1285,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 55
+          "execution_count": 77
         }
       ]
     },
@@ -1293,7 +1293,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "fblA7nj3b2Uv",
-        "outputId": "9cb19c0e-bcfd-4549-a089-ae103ad0df06",
+        "outputId": "24538012-815a-4759-feca-ea30b016aa10",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1301,7 +1301,7 @@
       "source": [
         "df.dtypes"
       ],
-      "execution_count": 56,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1333,7 +1333,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 56
+          "execution_count": 78
         }
       ]
     },
@@ -1341,7 +1341,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "E7YAd-BicZRH",
-        "outputId": "916ee056-509b-4089-de31-bdbd6f1ea8a4",
+        "outputId": "be51329b-b01f-43c9-e365-6eece19e2aa4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1349,7 +1349,7 @@
       "source": [
         "df['MonthlyCharges'].unique()"
       ],
-      "execution_count": 57,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1361,7 +1361,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 57
+          "execution_count": 79
         }
       ]
     },
@@ -1369,7 +1369,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "L80TnQYjdc70",
-        "outputId": "d0b0ab61-70af-4398-a029-012f44605c7e",
+        "outputId": "d8fcea87-0e58-49af-c58e-4e14a05248f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1377,7 +1377,7 @@
       "source": [
         "df['TotalCharges'].unique()"
       ],
-      "execution_count": 58,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1390,7 +1390,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 58
+          "execution_count": 80
         }
       ]
     },
@@ -1398,7 +1398,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "yD2hLs6KdjlZ",
-        "outputId": "e9f91203-9f4f-467c-e433-c5fcf3ebd3d0",
+        "outputId": "6d4821ba-2e30-4dbf-cf5a-1278348807cf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1406,7 +1406,7 @@
       "source": [
         "len(df.loc[df['TotalCharges']==' '])"
       ],
-      "execution_count": 59,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1418,7 +1418,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 59
+          "execution_count": 81
         }
       ]
     },
@@ -1426,7 +1426,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "KEY-BgdZeGma",
-        "outputId": "856d6e5f-472c-4649-e92f-aa2288bbf8e7",
+        "outputId": "05afe1fd-e71c-42b6-8b84-b41da0593219",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 563
@@ -1435,7 +1435,7 @@
       "source": [
         "df.loc[df['TotalCharges']==' ']"
       ],
-      "execution_count": 60,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1759,7 +1759,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 60
+          "execution_count": 82
         }
       ]
     },
@@ -1771,14 +1771,14 @@
       "source": [
         "df.loc[(df['TotalCharges']==' '), 'TotalCharges']=0"
       ],
-      "execution_count": 61,
+      "execution_count": 83,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "c6hquMAheygp",
-        "outputId": "206613f0-49f9-41a7-e381-6e0855329b25",
+        "outputId": "54f28de5-13a5-4cd8-e4f7-f44273a1de95",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 563
@@ -1787,7 +1787,7 @@
       "source": [
         "df.loc[df['tenure']==0]"
       ],
-      "execution_count": 62,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2111,7 +2111,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 62
+          "execution_count": 84
         }
       ]
     },
@@ -2119,7 +2119,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "XF9wXDYhe_IU",
-        "outputId": "464de623-b4f3-417b-a2f1-0fa53a146395",
+        "outputId": "8e73b592-3a3d-4afa-9b6b-af3bb214542a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2128,7 +2128,7 @@
         "df['TotalCharges'] = pd.to_numeric(df['TotalCharges'])\n",
         "df.dtypes "
       ],
-      "execution_count": 64,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2160,7 +2160,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 64
+          "execution_count": 85
         }
       ]
     },
@@ -2168,7 +2168,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "RSdfV3RSfaqD",
-        "outputId": "01932d6b-d7d3-4a1d-c935-ac1bd039bd65",
+        "outputId": "d3d70a50-10cb-42d9-834f-2bab84f9a862",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 292
@@ -2178,7 +2178,7 @@
         "df.replace(' ', '-', regex=True, inplace=True)\n",
         "df.head()"
       ],
-      "execution_count": 65,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2358,14 +2358,90 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 65
+          "execution_count": 86
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ccoYUYDUllCd"
+        "id": "ccoYUYDUllCd",
+        "outputId": "2fac163c-a2da-4f8a-a94f-56fada63c24c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "X = df.drop('Churn', axis=1).copy()\n",
+        "X.head"
+      ],
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<bound method NDFrame.head of       gender  SeniorCitizen  ... MonthlyCharges TotalCharges\n",
+              "0     Female              0  ...          29.85        29.85\n",
+              "1       Male              0  ...          56.95      1889.50\n",
+              "2       Male              0  ...          53.85       108.15\n",
+              "3       Male              0  ...          42.30      1840.75\n",
+              "4     Female              0  ...          70.70       151.65\n",
+              "...      ...            ...  ...            ...          ...\n",
+              "7038    Male              0  ...          84.80      1990.50\n",
+              "7039  Female              0  ...         103.20      7362.90\n",
+              "7040  Female              0  ...          29.60       346.45\n",
+              "7041    Male              1  ...          74.40       306.60\n",
+              "7042    Male              0  ...         105.65      6844.50\n",
+              "\n",
+              "[7043 rows x 19 columns]>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 89
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "I5JKAiGemFB5",
+        "outputId": "43f5b415-f023-4014-fa79-1ca13e68b29b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "y = df['Churn'].copy()\n",
+        "y.head()"
+      ],
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0     No\n",
+              "1     No\n",
+              "2    Yes\n",
+              "3     No\n",
+              "4    Yes\n",
+              "Name: Churn, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 90
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NWEU5aZzmZJs"
       },
       "source": [
         ""
